# alten_axa

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: c7863593a773_create_user_table.py  d86cc8386fb0_create_pokemons_table.py
app/: main.py  utils.py
app/api/: auth.py  pokemons.py  user.py  user_pokemons.py
app/core/: config.py  db.py  dependencies.py  logging_config.py  security.py
app/models/: __init__.py  base.py  pokemon.py  user.py
app/schemas/: auth.py  base.py  pokemon.py  user.py
app/tests/: conftest.py  factories.py
app/tests/rest/: test_pokemons.py  test_user_pokemons.py
