[tool.poetry]
name = "alten-axa"
version = "0.1.0"
description = ""
authors = ["szymonpru <szymon.pruszek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
alembic = "^1.15.1"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.1"
bcrypt = "^4.3.0"
pyjwt = "^2.10.1"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
python-multipart = "^0.0.20"
fastapi-pagination = "^0.12.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
